User phone number validation bug fixes

--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -83,7 +83,7 @@
                                 <ngx-intl-tel-input [cssClass]="'form-control form-control-sm mb-1'"
                                     [preferredCountries]="preferredCountries" [enableAutoCountrySelect]="true"
                                     [enablePlaceholder]="true" [searchCountryFlag]="true" [selectFirstCountry]="true"
-                                    [selectedCountryISO]="CountryISO.Nigeria"
+                                    [selectedCountryISO]="CountryISO.Kenya"
                                     [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
                                     [phoneValidation]="true" [(ngModel)]="newClientData.inputClientPhone"
                                     [numberFormat]="PhoneNumberFormat.National" #newClientPhoneInput="ngModel">
@@ -106,7 +106,7 @@
                             <ngx-intl-tel-input [cssClass]="'form-control form-control-sm mb-1'"
                                 [preferredCountries]="preferredCountries" [enableAutoCountrySelect]="true"
                                 [enablePlaceholder]="true" [searchCountryFlag]="true" [selectFirstCountry]="true"
-                                [selectedCountryISO]="CountryISO.Nigeria"
+                                [selectedCountryISO]="CountryISO.Kenya"
                                 [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
                                 [phoneValidation]="true" [(ngModel)]="clientPhone" #clientPhoneInput="ngModel"
                                 [numberFormat]="PhoneNumberFormat.National">
