--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -110,8 +110,7 @@
                                 [selectedCountryISO]="CountryISO.Kenya"
                                 [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
                                 [phoneValidation]="true" [(ngModel)]="clientPhone" #clientPhoneInput="ngModel"
-                                [numberFormat]="PhoneNumberFormat.National"
-                                (ngModelChange)="onPhoneInputChange()">
+                                [numberFormat]="PhoneNumberFormat.National" (ngModelChange)="onPhoneInputChange()">
                             </ngx-intl-tel-input>
                             <div *ngIf="clientPhoneInput.errors?.['validatePhoneNumber']?.['valid'] === false"
                                 class="form-text text-danger">
@@ -135,10 +134,10 @@
                         <div class="col-sm-4 col-6">
                             <label for="product" class="quote-label required" id="product">{{'gis.quotation.product' |
                                 translate}}</label><br>
-                            <p-dropdown formControlName="productCode" name="productCode" [options]="ProductDescriptionArray"
-                                optionLabel="description" dataKey="code" (onChange)="onProductSelected($event.value)"
-                                placeholder=" " [filterBy]="'description'" [placeholder]="parsedProductDesc"
-                                [filter]="true"></p-dropdown>
+                            <p-dropdown formControlName="productCode" name="productCode"
+                                [options]="ProductDescriptionArray" optionLabel="description" dataKey="code"
+                                (onChange)="onProductSelected($event.value)" placeholder=" " [filterBy]="'description'"
+                                [placeholder]="parsedProductDesc" [filter]="true"></p-dropdown>
 
 
                             <!-- Display error message under the field -->
@@ -172,8 +171,8 @@
                                 (ngModelChange)="getCoverToDate()"> -->
 
 
-                            <p-calendar formControlName="withEffectiveFromDate" name="withEffectiveFromDate" [dateFormat]="dateFormat"
-                                [showIcon]="true" [showButtonBar]="true"
+                            <p-calendar formControlName="withEffectiveFromDate" name="withEffectiveFromDate"
+                                [dateFormat]="dateFormat" [showIcon]="true" [showButtonBar]="true"
                                 [placeholder]="coverFrom ? coverFrom : todaysDate" [minDate]="minDate"
                                 [(ngModel)]="selectedEffectiveDate"
                                 (ngModelChange)="onDateInputChange(selectedEffectiveDate);getCoverToDate()">
@@ -194,9 +193,9 @@
                                 | translate}}</label>
 
 
-                            <p-dropdown formControlName="currencyCode" name="currencyCode" [options]="currencyList" optionLabel="name"
-                                dataKey="id" (onChange)="onCurrencySelected($event.value)" [filterBy]="'name'"
-                                [filter]="true" [placeholder]="defaultCurrencyName"></p-dropdown>
+                            <p-dropdown formControlName="currencyCode" name="currencyCode" [options]="currencyList"
+                                optionLabel="name" dataKey="id" (onChange)="onCurrencySelected($event.value)"
+                                [filterBy]="'name'" [filter]="true" [placeholder]="defaultCurrencyName"></p-dropdown>
                             <!-- Display error message under the field -->
                             <!-- <div *ngIf="personalDetailsForm.get('currencyCode').hasError('required') && personalDetailsForm.get('currencyCode').touched"
                                 class="form-text text-danger">
@@ -214,7 +213,7 @@
                                     <form [formGroup]="dynamicForm">
                                         <div
                                             *ngIf="field.name !== 'yearOfManufacture' && field.name !== 'selfDeclaredValue' && field.name !== 'carRegNo' && field.name !== 'modeOfTransport' && field.name !== 'value' 
-                                            && field.name !== 'occupation' && field.name !== 'coverTo'">
+                                            && field.name !== 'occupation' && field.name !== 'coverTo' && field.name !== 'vesselType'">
                                             <label class="quote-label" [for]="field.name">{{ field.label }}</label>
                                             <input [type]="field.type" [formControlName]="field.name" id="quote-input"
                                                 class="form-control form-control-sm mb-1 col-md-8">
@@ -251,7 +250,7 @@
                                                 (input)="updateCarRegNoValue($event); validateCarRegNo(); transformToUpperCase($event)"
                                                 placeholder="e.g KCA 345R" [ngModel]="parsedCarRegNo">
 
-                                            
+
                                             <div *ngIf="carRegNoHasError" class="form-text text-danger">
                                                 <div *ngIf="!carRegNoValue.match(dynamicRegexPattern)">
                                                     {{'gis.quotation.please_enter_valid_reg_no' | translate}}
@@ -290,7 +289,7 @@
                                         <div *ngIf="field.name == 'value'">
                                             <label class="quote-label required" [for]="field.name">{{ field.label
                                                 }}</label>
-                                          
+
                                             <input type="text" id="quote-input"
                                                 class="form-control form-control-sm mb-1" [formControlName]="field.name"
                                                 [ngModel]="parsedSumInsured" currencyMask [options]='currencyObj'>
@@ -303,23 +302,28 @@
                                         <div *ngIf="field.name == 'occupation'">
                                             <label class="quote-label " [for]="field.name">{{ field.label
                                                 }}</label>
-                                                <p-dropdown   [options]="occupationData"
-                                                optionLabel="name" dataKey="id" (onChange)="onOccupationSelected($event.value)"
-                                                placeholder=" " [filterBy]="'name'" 
-                                                [filter]="true"></p-dropdown>
+                                            <p-dropdown [options]="occupationData" optionLabel="name" dataKey="id"
+                                                (onChange)="onOccupationSelected($event.value)" placeholder=" "
+                                                [filterBy]="'name'" [filter]="true"></p-dropdown>
                                         </div>
                                         <div *ngIf="field.name == 'coverTo'">
                                             <label class="quote-label " [for]="field.name">{{ field.label
                                                 }}</label>
-                                                <p-calendar  [dateFormat]="dateFormat"
-                                                [showIcon]="true" [showButtonBar]="true"
-                                                 [minDate]="minDate"
+                                            <p-calendar [dateFormat]="dateFormat" [showIcon]="true"
+                                                [showButtonBar]="true" [minDate]="minDate"
                                                 [(ngModel)]="selectedCoverToDate"
                                                 (ngModelChange)="onCoverToInputChange(selectedCoverToDate);">
                                             </p-calendar>
-                
-                                           
 
+
+
+                                        </div>
+                                        <div *ngIf="field.name == 'vesselType'">
+                                            <label class="quote-label " [for]="field.name">{{ field.label
+                                                }}</label>
+                                            <p-dropdown [options]="vesselTypeList" optionLabel="name" dataKey="code"
+                                                (onChange)="onVesselTypeSelected($event.value)" placeholder=" "
+                                                [filterBy]="'name'" [filter]="true"></p-dropdown>
                                         </div>
                                     </form>
                                 </div>
@@ -388,6 +392,57 @@
                                         </ng-template>
 
                                     </p-table>
+                                    <p-table #dt1 [value]="clientData" [tableStyle]="{'max-width': '465px'}"
+                                        selectionMode="single" [resizableColumns]="true" styleClass="p-datatable-sm"
+                                        responsiveLayout="scroll" class="ui-datatable" [autoLayout]="true"
+                                        [paginator]="true" [rows]="5" [scrollable]="true" scrollDirection="horizontal"
+                                        [showCurrentPageReport]="true"
+                                        currentPageReportTemplate=" {first} - {last} of {totalRecords}"
+                                        [globalFilterFields]="['idNumber', 'emailAddress', 'lastName', 'emailAddress']">
+                                        <ng-template pTemplate="caption">
+                                            <div class="flex">
+                                                <span class="p-input-icon-left ml-auto">
+                                                    <i class="pi pi-search search-icon"></i>
+                                                    <!-- <input class="search-input" pInputText type="text"
+                                                        (input)="onGlobalSearch($event.target.value)"
+                                                        placeholder="Search" /> -->
+                                                </span>
+                                            </div>
+                                        </ng-template>
+
+                                        <ng-template pTemplate="header">
+                                            <tr id="product">
+                                                <th>
+                                                    <p-columnFilter type="text" field="idNumber"
+                                                        placeholder="{{'gis.quotation.id_no' | translate}}"
+                                                        (filterChange)="onFilterChange('idNumber', $event)">
+                                                    </p-columnFilter>
+                                                </th>
+                                                <th>
+                                                    <p-columnFilter type="text" field="name"
+                                                        placeholder="{{'gis.quotation.name' | translate}}"
+                                                        (filterChange)="onFilterChange('name', $event)">
+                                                    </p-columnFilter>
+                                                </th>
+                                                <th>
+                                                    <p-columnFilter type="text" field="emailAddress"
+                                                        placeholder="{{'gis.quotation.email' | translate}}"
+                                                        (filterChange)="onFilterChange('emailAddress', $event)">
+                                                    </p-columnFilter>
+                                                </th>
+                                            </tr>
+                                        </ng-template>
+
+                                        <ng-template let-clientData pTemplate="body">
+                                            <tr id="productData" [pSelectableRow]="clientData"
+                                                (click)="loadClientDetails(clientData.id);">
+                                                <td>{{ clientData.idNumber }}</td>
+                                                <td>{{ clientData.firstName + " " + clientData.lastName }}</td>
+                                                <td>{{ clientData.emailAddress }}</td>
+                                            </tr>
+                                        </ng-template>
+                                    </p-table>
+
                                     <br>
                                 </div>
 
