--- a/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
@@ -129,7 +129,7 @@
                                 id="openRiskModalButtonEdit" [hidden]="true"
                                 title="Delete">
                             </button>
-                            <button type="button" id="icon" class="btn btn-primary" title="Delete">
+                            <button type="button" id="icon" class="btn btn-primary" title="Edit">
                                 <i class="fa-solid fa-pencil" (click)="openRiskEditModal()"></i>
                             </button>
 
@@ -172,7 +172,10 @@
                         <tr [class.p-highlight]="risk === selectedRisk" (click)="onRiskSelect(risk)">
                             <td>{{ risk.propertyId }}</td>
                             <td>{{ risk.covertypeShortDescription }}</td>
+                            <!-- <td>{{ risk.sectionsDetails[0]?.limitAmount | number  }}</td> -->
+
                             <td appCommaFormat>{{ risk.sectionsDetails[0]?.limitAmount }}</td>
+
                             <td>{{ risk.sectionsDetails[0]?.description }}</td>
                         </tr>
                     </ng-template>
@@ -369,60 +372,43 @@
                     <!-- EXCESSES TAB CONTENT -->
                     <div class="tab-pane fade mt-4 " id="pills-excesses" role="tabpanel"
                         aria-labelledby="pills-home-tab">
-                        <p-table [value]="excessesList" dataKey="code" selectionMode="single"
-                            [tableStyle]="{'min-width': '50rem'}" [(selection)]="selectedExcess"
-                            responsiveLayout="scroll" [autoLayout]="true" [paginator]="true" [rows]="5"
-                            [showCurrentPageReport]="true"
-                            currentPageReportTemplate=" {first} - {last} of {totalRecords}" [autoLayout]="true"
-                            class='ui-datatable' styleClass="p-datatable-sm">
-
-                            <ng-template pTemplate="header">
-                                <tr>
-                                    <!-- <th style="width: 5%;padding-right: 50px;">{{'gis.quotation.select' | translate}}</th> -->
-                                    <th class="flexible-header">Heading</th>
-                                    <th class="flexible-header">Description</th>
-                                    <th class="flexible-header"></th>
-                                    <th class="flexible-header">Mandatory</th>
-
-
-
-                                </tr>
-                            </ng-template>
-                            <ng-template pTemplate="body" let-excessesList let-ri="rowIndex">
-                                <tr [pSelectableRow]="excessesList"
-                                    [class.p-highlight]="excessesList === selectedExcess" class="custom-row">
-
-                                    <td class="flexible-header" style=" white-space: nowrap;
-                                      overflow: hidden;
-                                      text-overflow: ellipsis;
-                                      overflow-y: auto;
-                                      max-width: 250px;" pTooltip="{{excessesList.heading }}" tooltipPosition="top"
-                                    >
-                                        {{excessesList.heading}}
-                                    </td>
-                                    <td class="flexible-header"
-                                        style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width:300px; overflow-y: auto;">
-                                        {{excessesList.wording}}
-                                    </td>
-                                    <td class="flexible-header">
-                                        <button pButton pRipple type="button" (click)="openHelperModal(excessesList)"
-                                            icon="pi pi-info-circle" class="p-button-rounded p-button-text"></button>
-                                    </td>
-                                    <td class="flexible-header">{{excessesList.isMandatory}}</td>
-
-                                </tr>
-                                <!-- Modal for each row -->
-                                <p-dialog [(visible)]="excessesList.showHelperModal" [modal]="false"
-                                    [style]="{ 'width': '700px'}">
-                                    <ng-container *ngIf="excessesList">
-                                        <div pResizable [ngStyle]="{'min-width.px': 200, 'min-height.px': 150}"
-                                            (onResize)="onResize($event)">
-                                            <p>{{ excessesList.wording }}</p>
-                                        </div>
-                                    </ng-container>
-                                </p-dialog>
-                            </ng-template>
-                        </p-table>
+                        <p-table
+                        #dt1
+                        [value]="excessesList"
+                        dataKey="code"
+                        selectionMode="single"
+                        [tableStyle]="{ 'min-width': '50rem' }"
+                        responsiveLayout="scroll"
+                        [paginator]="true" [rows]="5" [showCurrentPageReport]="true"
+                        currentPageReportTemplate=" {first} - {last} of {totalRecords}"
+                        [autoLayout]="true" class='ui-datatable' styleClass="p-datatable-sm"
+                      >
+                        <ng-template pTemplate="header">
+                          <tr>
+                            <th >Narration</th>
+                            <th >Value</th>
+                          </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-limits let-ri="rowIndex">
+                          <tr>
+                            <td   style=" white-space: nowrap;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            overflow-y: auto;
+                            max-width: 250px;" pTooltip="{{limits.narration }}"
+                                      tooltipPosition="top">{{limits.narration}}</td>
+                            <td >{{limits.value |number}}  </td>
+                          </tr>
+                        </ng-template>
+                        <ng-template pTemplate="emptymessage">
+                          <tr>
+                              <td colspan="1"></td>
+          
+                              <td colspan="10" style="padding:20px;padding-left: 30px;" id="empty">No data to display.</td>
+                          </tr>
+          
+                      </ng-template>
+                      </p-table>
 
                     </div>
                 </div>
